# Seungeon-Lee

./: README.md  likelion-13th-key.pem
Likelion/: .gitignore  client_secret_64030932456-hsbmrhl7i90m7rrs10cd7jjf8fmcip62.apps.googleusercontent.com.json  pyproject.toml  run_with_tunnel.py  secrets.json
Likelion/accounts/: models.py  serializers.py  urls.py  views.py
Likelion/accounts/migrations/: 0001_initial.py
Likelion/config/: custom_api_exceptions.py  custom_exception_handler.py  custom_exceptions.py  middlewares.py  permissions.py  settings.py  urls.py
Likelion/posts/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
Likelion/posts/migrations/: 0001_initial.py  0002_comment.py  0003_category.py  0004_linkcategory.py  0005_image.py
